samples/_failures_safe/1761617845_c47fd4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29e72af5.c: In function ‘main’:
./samples/SAFE/__tmp_29e72af5.c:143:17: error: expected expression at end of input
  143 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_29e72af5.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29e72af5.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29e72af5.c:143:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_29e72af5.c:143:17: error: expected declaration or statement at end of input
